# example-chat

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
clients/: command_client.py
server/: Dockerfile  app.py  pyproject.toml
